# numeric_analysis

./: CMakeLists.txt
include/: fsolve.h
lib/: fsolve.exp  fsolve.lib  test_ctypes.py
python_extension/: fsolve.c  fsolve.cp38-win_amd64.pyd  fsolve.pxd  fsolve.pyx  py_fsolve.c  py_fsolve.h  run.py  setup.py
src/: fsolve.c  main.c
